# Elevator

./: .gitignore  Doxyfile  LICENSE  README.md  annotated.html  annotated_dup.js  classes.html  dir_000003_000002.html  dir_000004_000002.html  dir_000004_000003.html  dir_000005_000003.html  dir_0b6f4d1aa766690a3b5c9958e1f98cfd.html  dir_0b6f4d1aa766690a3b5c9958e1f98cfd.js  dir_0b6f4d1aa766690a3b5c9958e1f98cfd_dep.map  dir_0b6f4d1aa766690a3b5c9958e1f98cfd_dep.md5  dir_43532460448d97320a2d8d3edbe18c15.html  dir_43532460448d97320a2d8d3edbe18c15.js  dir_43532460448d97320a2d8d3edbe18c15_dep.map  dir_43532460448d97320a2d8d3edbe18c15_dep.md5  dir_69c0ad47d15d71cfac8e0d206e4e350d.html  dir_82b1a03abd81c3d66b3bfa542b070436.html  dir_82b1a03abd81c3d66b3bfa542b070436.js  dir_82b1a03abd81c3d66b3bfa542b070436_dep.map  dir_82b1a03abd81c3d66b3bfa542b070436_dep.md5  dir_d9edf6c004b4a7ff14fe9ae7a92214ee.html  dir_d9edf6c004b4a7ff14fe9ae7a92214ee.js  dir_d9edf6c004b4a7ff14fe9ae7a92214ee_dep.map  dir_d9edf6c004b4a7ff14fe9ae7a92214ee_dep.md5  dir_f4316de2dfb04db90651672103de31d6.html  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  (+7 more)
Elevator/: .gitignore  Doxyfile
PCB Design/: README.md
custom_layout/: elevator_template.css  footer.html  header.html
firmware/main/: CMakeLists.txt
firmware/main/inc/: accelerometer.h  elevator.h  pressure_sensor.h  serial_communication.h
firmware/main/src/: serial_communication.c  servo.c
hardware/: README.md
(+456 files in other folders)
